styling in separate file, added mobile version

--- a/audio.html
+++ b/audio.html
@@ -1,46 +1,7 @@
 <html lang="en">
 <head>
     <title>Audio Player</title>
-    <style>
-
-        body, td, th, button, input {
-            font-family: Verdana;
-            font-size: 12px;
-            outline: none;
-        }
-
-        .btn {
-            width: 72px;
-            height: 22px;
-            border-radius: 4px;
-            background-color: #ffffff;
-            color: #000000;
-        }
-
-        .ibtn {
-            width: 36px;
-            height: 22px;
-            border-radius: 4px;
-            background-color: #ffffff;
-            color: #000000;
-        }
-
-        a {
-            color:black;
-            text-decoration: none;
-        }
-
-        #playlist .current-song a {
-            color:blue;
-        }
-
-        #playlistName {
-            width: 144px;
-            height: 22px;
-            border-radius: 4px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script src="audio.js"></script>
 </head>
 
